# Lumina-AI-Workflow

./: .gitignore  GEMINI.md  LICENSE  README.md  pyproject.toml  test_workflow.py
docs/: api-workflow.md  arquitectura-proyecto.md  data-processing-workflow.md  executor-workflow.md  generator-workflow.md  interface-workflow.md  logging.md  main-workflow.md  notebook-etl.md  reflector-workflow.md  utils-encode-image-b64.md  utils-ensure-execute-python-tags.md  utils-get-response.md  utils-image-openai-call.md  utils-make-schema-text.md  utils-parse-reflector-response.md
notebook/: etl.ipynb
src/: api.py  config.py  data_processing.py  executor.py  generator.py  interface.py  main.py  reflector.py  utils.py
tests/: conftest.py  test_data_processing_load_and_prepare.py  test_executor_extract_code.py
